@@ -4,7 +4,11 @@
  */
 package com.serotonin.m2m2.rt.script;
 
+import java.util.Map;
+
+import com.infiniteautomation.mango.statistics.StartsAndRuntime;
 import com.infiniteautomation.mango.statistics.StartsAndRuntimeList;
+import com.serotonin.m2m2.rt.dataImage.types.MultistateValue;
 import com.serotonin.m2m2.rt.dataImage.types.DataValue;
 
 /**
@@ -40,5 +44,16 @@ public class MultistateStartsAndRuntimeListWrapper extends StartsAndRuntimeListW
             return null;
         else
             return value.getIntegerValue();
+    }
+    public StartsAndRuntime get(int value) {
+        Map<Object, StartsAndRuntime> values = statistics.getStartsAndRuntime();
+        if(values.containsKey(value))
+            return values.get(value);
+        else
+            return new StartsAndRuntime(new MultistateValue(value));
+    }
+    @Override
+    public String toString() {
+        return super.toString() + " get(int): StartsAndRuntime";
     }
 }
