@@ -45,6 +45,7 @@
 * Improved IPv6 support in data sources with whitelists
 * Hide logout button for proxied requests to legacy UI since they are stateless
 * Add support for REST Mime Type: application/sql
+* Reinstate get(boolean) and get(int) functions for starts and runtime lists in JavaScript statistics for Binary and Multistate points
 
 *Version 3.4.5*
 * Content Security Policy (CSP) is now disabled by default and the configuration options have changed, please review the new setting names and update your env.properties file if you want to continue using CSP
